@@ -21,8 +21,14 @@
 </head>
 <body>
 
-    This package uses synonyms defined by <a href="http://www.cogsci.princeton.edu/~wn/">WordNet</a> to build a
-    Lucene index storing them, which in turn can be used for query expansion.
+    This package uses synonyms defined by <a href="http://www.cogsci.princeton.edu/~wn/">WordNet</a>.
+    There are two methods: query expansion and analysis.
+    
+    Both methods first require you to download the <a href="http://www.cogsci.princeton.edu/2.0/WNprolog-2.0.tar.gz">WordNet prolog database</a>
+    Inside this archive is a file named wn_s.pl, which contains the WordNet synonyms. 
+    
+    <h1>Query Expansion Method</h1>
+    This method creates Lucene index storing the synonyms, which in turn can be used for query expansion.
 
     You normally run {@link org.apache.lucene.wordnet.Syns2Index} once to build the query index/"database", and then call
     {@link org.apache.lucene.wordnet.SynExpand#expand SynExpand.expand(...)} to expand a query.
@@ -31,12 +37,21 @@
 
 	<h3> Instructions </h3>
 	<ol>
-	    <li> Download the <a href="http://www.cogsci.princeton.edu/2.0/WNprolog-2.0.tar.gz">WordNet prolog database</a> , gunzip, untar etc.
 	<li> Invoke Syn2Index as appropriate to build a synonym index.
-	    It'll take 2 arguments, the path to wn_s.pl from that WordNet download, and the index name.
+	    It'll take 2 arguments, the path to wn_s.pl from the WordNet download, and the index name.
    
 	 <li> Update your UI so that as appropriate you call SynExpand.expand(...) to expand user queries with synonyms.
        </ol>
+    
+    <h1>Analysis Method</h1>
+    This method injects additional synonym tokens for tokens from a child {@link org.apache.lucene.analysis.TokenStream}.
+    
+    <h3> Instructions </h3>
+    <ol>
+    	<li>Create a {@link org.apache.lucene.wordnet.SynonymMap}, passing in the path to wn_s.pl
+    	<li>Add a {@link org.apache.lucene.wordnet.SynonymTokenFilter} to your analyzer. Note: SynonymTokenFilter should be after LowerCaseFilter, 
+    	because it expects terms to already be in lowercase.
+    </ol>
 
 </body>
     </html>
